# tab-pipeline

./: .gitignore  README.md  pyproject.toml
configs/: local-audio-separator.yaml
src/tab_pipeline/: cli.py  constants.py
src/tab_pipeline/adapters/: audio_separator_backend.py  ffmpeg.py  separator.py  stub_separator.py
src/tab_pipeline/core/: cleanup.py  hashing.py  paths.py  runner.py
src/tab_pipeline/models/: config.py  run.py
src/tab_pipeline/stages/: ingest.py  normalize.py  separate.py
tests/: test_cleanup.py  test_smoke.py
