[project]
name = "tab-pipeline"
version = "0.1.0"
description = "Local Python pipeline for staged audio-to-tab transcription workflows."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.7,<3.0",
  "pyyaml>=6.0,<7.0",
  "audio-separator[cpu]>=0.43.1,<0.44.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
tab-pipeline = "tab_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]